# grand_research

./: .gitignore  AGENTS.md  FlexShare.py  FlexShareImage.py  FlexShareImageEncrypt.py  FlexShareImageFree.py  GEMINI.md  MCP.md  README.ja.md  README.md  demo_k_recovery_gallery.py  demo_k_sweep.py  demo_k_vs_strategy.py  demo_phash_sis.py  demo_sis_only.py  multi_secret_image_demo.py  new2.py  noise2forest_and_inversion.py  output_log.txt  plot_log.txt  progress.md  pyproject.toml  requirements.txt  resume-template.tex  resume.aux  resume.dvi  resume.tex  reversible_sd.py  stego_lsb_cnn_demo.py  test_reversible_sd.py  thesis.aux  thesis.blg  thesis.dvi  thesis.lof  thesis.lot  thesis.md  thesis.tex  thesis.toc  thesis.txt  thesis_template.tex  (+1 more)
SIS_image/: searchable_sis_phash_image_sis_demo.py  searchable_sis_phash_selective_demo.py  secure_search_sis_phash_demo.py  shamir_image_sis_store_demo.py
dealer_free_sis/: __init__.py  __main__.py
demos/: demo_k_recovery_gallery.py  demo_k_sweep.py  demo_k_vs_strategy.py  demo_phash_sis.py  demo_sis_only.py  multi_secret_image_demo.py  verify_workflows.py
docs/: README.md  experimental_flow.md  graph_mode_summary.md  phash_masked_sis_notes.md  project_structure_improvements.md  security_improvements.md  sis_dealer_free.md  stage_less_modes.md  thesis_resume.md
evaluation/: plotting.py
experiments/: analyze_results.py  prepare_data.py  run_experiments.py
pHR_SIS/: __init__.py  cli.py  fusion.py  fusion_index.py  image_store.py  index.py  oprf.py  phash.py  searchable_sis_phash_image_sis_demo.py  workflow.py  (+3 more)
(+104 files in other folders)
